[metadata]
name = forest_fire_clustering
version = 0.0.24
author = Flynn Chen
author_email = flynn.chen@yale.edu
description = Clustering method based on Forest Fire Dynamics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flynn-chen/forest-fire-clustering
project_urls =
    Bug Tracker = https://github.com/flynn-chen/forest-fire-clustering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
